ansible/k8s/manifests/wordpress/wordpress.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  serviceName: wordpress
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: wordpress
          image: ghcr.io/akashisn/wordpress@sha256:74706be36503d9634066a7a590d91f52abffdf52c17fe27d74e81f6aa082c98e
          imagePullPolicy: IfNotPresent
          args:
            - /docker-entrypoint-hooks.sh
            - php-fpm
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: wordpress-secrets
              mountPath: /secrets
            - name: wordpress-conf
              mountPath: /usr/local/etc/php-fpm.d/zz-docker.conf
              subPath: zz-docker.conf
              readOnly: true
            - name: wordpress-conf
              mountPath: /usr/local/etc/php/conf.d/wordpress.ini
              subPath: wordpress.ini
              readOnly: true
            - name: wordpress-hooks
              mountPath: /docker-entrypoint-hooks.sh
              subPath: hooks.sh
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
        - name: nginx
          image: nginx:1.27.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: nginx-wordpress
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/wordpress.conf
              subPath: wordpress.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 300m
              memory: 2000Mi
      volumes:
        - name: wordpress-secrets
          projected:
            sources:
              - secret:
                  name: wordpress-secrets
              - secret:
                  name: common-secrets
                  items:
                    - key: email_address
                      path: email_address
        - name: wordpress-conf
          configMap:
            name: wordpress-conf
        - name: wordpress-hooks
          configMap:
            defaultMode: 504
            name: wordpress-hooks
        - name: nginx-conf
          configMap:
            name: nginx-conf
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: app
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: wordpress
  name: wordpress
  namespace: wordpress
spec:
  ports:
    - name: nginx-wordpress
      port: 80
      targetPort: nginx-wordpress
  selector:
    app: wordpress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.akashisn.info
      secretName: wordpress-cert
  rules:
    - host: blog.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  name: nginx-wordpress
